fixed category header spacing

--- a/app/assets/stylesheets/plans.scss
+++ b/app/assets/stylesheets/plans.scss
@@ -68,6 +68,7 @@
   background: #fff;
   h3 {
     margin-top: 5px;
+    display: inline-block;
   }
   .required-units {
     position: absolute;
